<resources>
        <string name="app_name">Zhouse Climate Shortcut</string>
    <string name="hello_world">Hello world!</string>
    <string name="contentDescription">ASDF</string>
    <string name="login_description">Login to Your server:</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>
    <string name="login_ipaddress">ip address</string>
    <string name="login_button">Login</string>
    <string name="login_button_local">Try local</string>
    <string name="login_user_pass_missing">Enter\n username and password</string>
    <string name="login_user_missing">Please enter username</string>
    <string name="login_pass_missing">Please enter password</string>
    <string name="login_looking_vera_msg">Looking for server₀</string>
    <string name="login_server_found_remote">Server was found \n in remote connection</string>
    <string name="login_server_found_local">Server was found \n in local network</string>
    <string name="login_server_notfound">Server not found. \n Check Your internet \n connection and login data \n or try to configure \n custom IP for local \n connection. </string>
    <string name="window_dimmer_set_on">SET ON</string>
    <string name="window_dimmer_set_off">SET OFF</string>
    <string name="window_danfoss_set">SET</string>
    <string name="window_danfoss_plus">+</string>
    <string name="window_danfoss_minus">-</string>
    <string name="window_windowcover_open">OPEN</string>
    <string name="window_windowcover_stop">STOP</string>
    <string name="window_windowcover_close">CLOSE</string>
    <string name="window_thermostat_heat">heat</string>
    <string name="window_thermostat_cool">cool</string>
    <string name="window_thermostat_mode">thermostat</string>
    <string name="window_thermostat_fanmode">fan</string>
    <string name="window_thermostat_mode_off">off</string>
    <string name="window_thermostat_mode_cool">cool</string>
    <string name="window_thermostat_mode_heat">heat</string>
    <string name="window_thermostat_mode_auto">auto</string>
    <string name="window_thermostat_fanmode_on">on</string>
    <string name="window_thermostat_fanmode_cycle">cycle</string>
    <string name="window_thermostat_fanmode_auto">auto</string>
    <string name="change_room_icon_txt">Change icon</string>
    <string name="change_room_icon_for_txt">Change icon for</string>
    <string name="kitchen_icon_name">Kitchen</string>
    <string name="restroom_icon_name">Restroom</string>
    <string name="bedroom_icon_name">Bedroom</string>
    <string name="bathroom_icon_name">Bathroom</string>
    <string name="anteroom_icon_name">Anteroom</string>
    <string name="basement_icon_name">Basement</string>
    <string name="cloakroom_icon_name">Cloakroom</string>
    <string name="garage_icon_name">Garage</string>
    <string name="kidsroom_icon_name">Kids room</string>
    <string name="bathroom2_icon_name">Bathroom 2</string>
    <string name="bedroom2_icon_name">Bedroom 2</string>
    <string name="restroom2_icon_name">Restroom 2</string>
    <string name="dining_room_icon_name">Dining room</string>
    <string name="education_room_icon_name">Education room</string>
    <string name="garden_icon_name">Garden</string>
    <string name="laundry_icon_name">Laundry</string>
    <string name="library_icon_name">Library</string>
    <string name="multimedia_icon_name">Multimedia</string>
    <string name="office_icon_name">Office</string>
    <string name="pool_icon_name">Pool</string>
    <string name="stairs_icon_name">Stairs</string>
    <string name="empty_icon_name">Empty</string>
    <string name="sunrise_txt">sunrise</string>
    <string name="sunset_txt">sunset</string>
    <string name="condition_txt">conditions:\nhumidity:\wind conditions:\nWind direction:\nWind Speed:\n</string>
    <string name="thermostat_state_desc">heat:\ncool:\nmode:\nfan mode:\nstate:\n</string>
    <string name="variable_txt">variable name 1:\nvariable name 2:\nvariable name 3:\nvariable name 4:\nvariable name 5:</string>
    <string name="variable_state_txt">0\n0\n0\n0\n0</string>
    <string name="no_room_name">No room</string>
    <string name="no_connection_reminder">There is no connection with server</string>
    <string name="error_undefined">undefined error</string>
    <string name="error_getting_data">error getting data</string>
    <string name="error_cannot_find_camera">Cannot connect to camera</string>
    <string name="camera_view_error_getting_view">Error getting stream address</string>
    <string name="options_change_servers_window_desc">Change server</string>
    <string name="one_num">1</string>
    <string name="two_num">2</string>
    <string name="three_num">3</string>
    <string name="four_num">4</string>
    <string name="five_num">5</string>
    <string name="six_num">6</string>
    <string name="seven_num">7</string>
    <string name="eight_num">8</string>
    <string name="nine_num">9</string>
    <string name="zero_num">0</string>
    <string name="close_txt">close</string>
    <string name="open_txt">open</string>
    <string name="contype_noconfig_txt">There is no configuration</string>
    <string name="contype_noremoteconfig_txt">There is no remote configuration</string>
    <string name="contype_nointernet_txt">There is no connection</string>
    <string name="contype_veranotfound_txt">Vera not found</string>
    <string name="contype_vera_localy_txt">Vera found localy</string>
    <string name="contype_veraremote_txt">Vera found in remote connection</string>
    <string name="contype_badlogin_txt">Wrong username or password..</string>
    <string name="task_switch_turnon">Turn on</string>
    <string name="task_switch_turnoff">Turn off</string>
    <string name="task_switch_setto_1">Turn on</string>
    <string name="task_switch_setto_0">Turn off</string>
    <string name="task_dim_setto">Set to</string>
    <string name="task_runscene">Run scene</string>
    <string name="task_securitySensor_setto_1">Arm</string>
    <string name="task_securitySensor_setto_0">Disarm</string>
    <string name="task_lock_setto_1">Lock</string>
    <string name="task_lock_setto_0">Unlock</string>
    <string name="task_danfoss_setto">Set</string>
    <string name="task_windowCover_setto">Set</string>
    <string name="task_windowCover_setto_up">Move up</string>
    <string name="task_windowCover_setto_down">Move down</string>
    <string name="task_windowCover_setto_stop">Stop the</string>
    <string name="task_hvacMode_setto_auto">Set auto mode</string>
    <string name="task_hvacMode_setto_off">Turn off</string>
    <string name="task_hvacMode_setto_heat">Set heat mode</string>
    <string name="task_hvacMode_setto_cool">Set cool mode</string>
    <string name="task_hvacTemp_setto_heat">Set heat temp to</string>
    <string name="task_hvacTemp_setto_cool">Set cool temp to</string>
    <string name="task_fanMode_setto_auto">Set auto FanMode</string>
    <string name="task_fanMode_setto_on">Turn on Fan</string>
    <string name="task_fanMode_setto_cycle">Set cycle FanMode</string>
    <string name="task_ecoMode_setto_cycle">Set EcoMode</string>
    <string name="astronomic_nodata">no data</string>
    <string name="tlo_astronomic">tlo_astronomic</string>
    <string name="astronomic_icon_active">astronomic_icon_active</string>
    <string name="sun_icon">sun_icon</string>
    <string name="moon_icon">moon_icon</string>
    <string name="child_bckg">child_bckg</string>
    <string name="blind_icon">blind_icon</string>
    <string name="camera_icon">camera_icon</string>
    <string name="gears_icon">gears_icon</string>
    <string name="chronos_icon">chronos_icon</string>
    <string name="hash_icon">hash_icon</string>
    <string name="star_icon">star_icon</string>
    <string name="up_icon">up_icon</string>
    <string name="danfoss_icon">danfoss_icon</string>
    <string name="dimmer_icon">dimmer_icon</string>
    <string name="door_icon">door_icon</string>
    <string name="dis_icon">dis_icon</string>
    <string name="humi_sensor_icon">humi_sensor_icon</string>
    <string name="light_sensor_icon">light_sensor_icon</string>
    <string name="lock_icon">lock_icon</string>
    <string name="move_icon">move_icon</string>
    <string name="power_icon">power_icon</string>
    <string name="scene_icon">scene_icon</string>
    <string name="smoke_icon">smoke_icon</string>
    <string name="fire_icon">fire_icon</string>
    <string name="sunpos_icon">sunpos_icon</string>
    <string name="angle_icon">angle_icon</string>
    <string name="azimuth_icon">azimuth_icon</string>
    <string name="switch_icon">switch_icon</string>
    <string name="on_icon">on_icon</string>
    <string name="temp_sens_icon">temp_sens_icon</string>
    <string name="thermostat_icon">thermostat_icon</string>
    <string name="wheather_icon">wheather_icon</string>
    <string name="window_cover_icon">window_cover_icon</string>
    <string name="window_icon">window_icon</string>
    <string name="window_bckg">window_bckg</string>
    <string name="room_icon">room_icon</string>
    <string name="window_shutter_btn">window_shutter_btn</string>
    <string name="login_smarthome">login_smarthome</string>
    <string name="login_zhouse_logo">login_zhouse_logo</string>
    <string name="toast_icon">toast_icon</string>
    <string name="top_icon">top_icon</string>
    <string name="navigator">navigator_graphics</string>
    <string name="login_user_img">login_user_img</string>
    <string name="login_pass_img">login_pass_img</string>
    <string name="camera_img">camera_img</string>
    <string name="settings_room_icon">settings_room_icon</string>
    <string name="users_menu_txt">User</string>
    <string name="settings_menu_txt">Advanced</string>
    <string name="settings_choose_vera">Pick server</string>
    <string name="Settings_ok">OK</string>
    <string name="Settings_cancel">Cancel</string>
    <string name="settings_setvera_txt">Change Vera</string>
    <string name="inline_preferences">Settings</string>
    <string name="settings_window_name">Configure Your server</string>
    <string name="advanced_settings_window_name">Advanced settings</string>
    <string name="local_settings">Local IP</string>
    <string name="ipaddress_settings_txt">IP Adress</string>
    <string name="ipaddress_settings_desc">Server IP address in local network</string>
    <string name="findip_settings_txt">Atomatic configure</string>
    <string name="findip_settings_desc">Gets configuration automatic (needs internet connection)</string>
    <string name="remote_settings">Remote connection</string>
    <string name="username_settings_txt">User</string>
    <string name="username_settings_desc">Mios username</string>
    <string name="password_settings_txt">Password</string>
    <string name="password_settings_desc">Mios password</string>
    <string name="veranumber_settings_txt">Server number</string>
    <string name="veranumber_settings_desc">You will find it on the server casing</string>
    <string name="servers_settings_txt">Fwd1, Fwd2</string>
    <string name="servers_settings_desc">Mios fwd servers</string>
    <string name="portnumber_settings_txt">Port</string>
    <string name="portnumber_settings_desc">Port number (default 3480).</string>
    <string name="voice_turn_on">turn on</string>
    <string name="voice_turn_off">turn off</string>
    <string name="voice_lock">close</string>
    <string name="voice_unlock">open</string>
    <string name="voice_window_cover_close">close</string>
    <string name="voice_window_cover_open">open</string>
    <string name="voice_window_cover_stop">stop</string>
    <string name="voice_window_cover_stop2">stop</string>
    <string name="license_error">licensing error</string>
    <string name="no_license">You do not have license for this program.\nYou can buy this app on Google Play ;)</string>
</resources>