<?xml version="1.0" encoding="utf-8"?>       
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   	android:id="@+id/linearLayout1" 
    android:layout_height="wrap_content" 
    android:background="@drawable/rounded_shape_white"
	android:layout_gravity="center"
    android:layout_width="294dip">  

    <TextView 
        android:id="@+id/textView1"
      	android:layout_height="45dip" 
       	android:layout_width="fill_parent"
       	android:background="@drawable/window_dimmer_text_shape"
       	android:textSize="22dip"
       	android:paddingLeft="15dip"
       	android:textColor="#FFFFFFFF"
       	android:singleLine="true"/>    
    	
   	<ImageView
	    android:id="@+id/deviceIcon"
	    android:gravity="center_vertical"
	    android:layout_width="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/dimmer_icon"
	    android:src="@drawable/danfoss_icon_active" />

	<Button
    	android:id="@+id/danfoss_minus"
  		android:layout_width="45dip"
    	android:layout_height="45dip"
    	android:textColor="#ffffff"
    	android:layout_toLeftOf="@+id/temp_lvl_txt"
    	android:layout_centerHorizontal="true"
    	android:layout_marginRight="20dip"
    	android:layout_marginTop="75dip"
		android:textSize="30dip"
		android:text="@string/window_danfoss_minus"
    	android:background="@drawable/window_danfoss_button_plus_minus"
	    />	
   	
    <TextView 
	    android:id="@+id/temp_lvl_txt"
	    android:textColor="#FFa7c739"
      	android:layout_height="wrap_content" 
       	android:layout_width="wrap_content"
       	android:layout_centerHorizontal="true"
       	android:paddingTop="63dip"
       	android:textSize="50dip"
       	android:singleLine="true"/>
    
   	<Button
    	android:id="@+id/danfoss_plus"
  		android:layout_width="45dip"
    	android:layout_height="45dip"
    	android:textColor="#ffffff"
    	android:layout_toRightOf="@+id/temp_lvl_txt"
    	android:layout_marginLeft="20dip"
    	android:layout_marginTop="75dip"
		android:textSize="30dip"
		android:text="@string/window_danfoss_plus"
    	android:background="@drawable/window_danfoss_button_plus_minus"
	    />
    
		
	<Button
    	android:id="@+id/danfoss_set"
    	android:text="@string/window_danfoss_set"
    	android:layout_marginTop="150dip"
  		android:layout_width="fill_parent"
    	android:layout_height="45dp"
    	android:textColor="#ffffff"
    	android:background="@drawable/window_danfoss_button"
	    />

</RelativeLayout>
